--- a/splity/src/app/globals.css
+++ b/splity/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Montserrat";
+  src: url("../../public/fonts/Montserrat-VariableFont_wght.ttf")
+    format("opentype");
+  font-display: swap;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
