--- a/splity/src/app/preview-payer/preview-payer.module.css
+++ b/splity/src/app/preview-payer/preview-payer.module.css
@@ -8,7 +8,7 @@
   background: #000;
 }
 
-#payment-success {
+#preview-payer {
   position: relative;
   width: 430px;
   height: 100vh;
@@ -29,11 +29,10 @@
 }
 
 .image1 {
-  width: 280px;
-  height: 280px;
-  padding-right: 12px;
+  width: 320px;
+  height: 320px;
   object-fit: cover;
-  margin-top: 5em;
+  margin-top: 3em;
   user-select: none;
   pointer-events: none;
 }
@@ -46,7 +45,7 @@
   font-size: 1.8rem;
   font-weight: 800;
   letter-spacing: -1px;
-  margin-top: 1.2em;
+  margin-top: 1.5em;
   text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
   user-select: none;
 }
@@ -63,71 +62,52 @@
   user-select: none;
 }
 
-#avatar-container {
-  width: fit-content;
+.preview-container {
+  width: 80%;
+  height: 260px;
+  display: flex;
+  flex-flow: column nowrap;
+  overflow-y: auto;
+  margin-top: 2em;
+}
+
+.preview-item {
+  position: relative;
+  width: 100%;
   height: auto;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  margin-top: 3em;
+  margin-top: 0.5em;
 }
 
-.image2 {
+.image {
   width: 52px;
   height: 52px;
   object-fit: cover;
-  user-select: none;
-  pointer-events: none;
+  margin-left: 2em;
 }
 
-.text3 {
+.text {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
   line-height: 1;
-  font-size: 1.1rem;
-  font-weight: 600;
-  letter-spacing: -1px;
-  margin-left: 1em;
-  user-select: none;
-}
-
-.text4 {
-  width: fit-content;
-  color: #000;
-  font-family: "Montserrat", sans-serif;
-  line-height: 1;
-  font-size: 1.5rem;
-  font-weight: 500;
-  letter-spacing: -1px;
-  text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
-  margin-top: 2em;
-  user-select: none;
-}
-
-.text5 {
-  width: fit-content;
-  color: #000;
-  font-family: "Montserrat", sans-serif;
-  line-height: 1;
-  font-size: 0.85rem;
+  font-size: 0.95rem;
   font-weight: 600;
   letter-spacing: -0.5px;
-  margin-top: 1.1em;
+  margin-left: 1.4em;
   user-select: none;
 }
 
-.text6 {
-  width: fit-content;
-  color: #000;
-  font-family: "Montserrat", sans-serif;
-  line-height: 1;
-  font-size: 1rem;
-  font-weight: 600;
-  letter-spacing: -0.5px;
-  margin-top: 3em;
-  user-select: none;
+.dots {
+  position: absolute;
+  right: 0;
+  margin-right: 2em;
+  margin-bottom: 4px;
+  object-fit: cover;
+  cursor: pointer;
 }
 
 .link {
