--- a/splity/src/app/payment-success/payment-success.module.css
+++ b/splity/src/app/payment-success/payment-success.module.css
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   margin: 0;
   padding: 0;
@@ -11,7 +11,7 @@
 #payment-success {
   position: relative;
   width: 430px;
-  height: 100vh;
+  height: 932px;
   background: #f8f8f8;
   border: 0px solid #0000;
   margin: auto;
