--- a/splity/src/app/bill-payer/payment/payment.module.css
+++ b/splity/src/app/bill-payer/payment/payment.module.css
@@ -1,11 +1,18 @@
+.backimage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-left: 2em;
+}
+
 .header {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
   line-height: 1;
   font-size: 1.4rem;
-  font-weight: 800;
+  font-weight: 600;
   letter-spacing: -1px;
-  margin-left: 4em;
+  text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
   user-select: none;
 }
