--- a/splity/src/components/payment-card/PaymentCard.css
+++ b/splity/src/components/payment-card/PaymentCard.css
@@ -5,7 +5,9 @@
   perspective: 1000px;
   color: white;
   margin: 0 auto;
-  transform: scale(1.2);
+  margin-top: 4.5em;
+  margin-bottom: 1em;
+  transform: scale(1.3);
 }
 
 .heading_8264 {
@@ -104,7 +106,7 @@
 .code {
   font-weight: bold;
   text-align: center;
-  margin: 0.2em;
+  font-size: 0.5rem;
   color: black;
 }
 
