--- a/splity/src/app/bill-payer/payment-success/payment-success.module.css
+++ b/splity/src/app/bill-payer/payment-success/payment-success.module.css
@@ -1,17 +1,19 @@
 .container {
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   margin: 0;
   padding: 0;
   background: #000;
+  overflow-y: auto;
 }
 
 #payment-success {
   position: relative;
+  display: flex;
   width: 430px;
-  height: 932px;
+  min-height: 100vh;
   background: #f8f8f8;
   border: 0px solid #0000;
   margin: auto;
@@ -63,33 +65,16 @@
   user-select: none;
 }
 
-#avatar-container {
-  width: fit-content;
-  height: auto;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-  margin-top: 3em;
-}
-
-.image2 {
-  width: 52px;
-  height: 52px;
-  object-fit: cover;
-  user-select: none;
-  pointer-events: none;
-}
-
 .text3 {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
   line-height: 1;
-  font-size: 1.1rem;
+  font-size: 1.6rem;
   font-weight: 600;
+  margin-top: 2em;
+  text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
   letter-spacing: -1px;
-  margin-left: 1em;
   user-select: none;
 }
 
@@ -149,6 +134,7 @@
   line-height: 1;
   background: #000;
   margin-top: 4em;
+  margin-bottom: 5em;
   border-radius: 8px;
   user-select: none;
   cursor: pointer;
