--- a/splity/src/app/bill-creator/split-success/split-success.module.css
+++ b/splity/src/app/bill-creator/split-success/split-success.module.css
@@ -1,19 +1,25 @@
-.backimage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-left: 2em;
-}
-
-.header {
+.text1 {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
   line-height: 1;
-  font-size: 1.4rem;
-  font-weight: 600;
+  font-size: 1.8rem;
+  font-weight: 800;
   letter-spacing: -1px;
+  margin-top: 1.2em;
   text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
+  user-select: none;
+}
+
+.text2 {
+  width: fit-content;
+  color: #000;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1;
+  font-size: 0.8rem;
+  font-weight: 400;
+  letter-spacing: -0.5px;
+  margin-top: 2em;
   user-select: none;
 }
 
@@ -22,11 +28,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 80%;
   height: 56px;
   background-color: #000;
   border-radius: 8px;
-  margin-top: 4em;
   user-select: none;
 }
 
@@ -38,5 +43,17 @@
   font-size: 0.95rem;
   font-weight: 600;
   letter-spacing: -0.5px;
+  user-select: none;
+}
+
+.text3 {
+  width: fit-content;
+  color: #000;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1;
+  font-size: 0.9rem;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+  margin-top: 2em;
   user-select: none;
 }
