--- a/splity/src/app/bill-creator/preview-payer/preview-payer.module.css
+++ b/splity/src/app/bill-creator/preview-payer/preview-payer.module.css
@@ -28,7 +28,7 @@
   animation: fadeIn 0.8s ease-out 0.3s forwards;
 }
 
-.image1 {
+.preview-payer-image {
   width: 280px;
   height: 280px;
   object-fit: cover;
@@ -65,8 +65,10 @@
 .preview-container {
   width: 80%;
   height: auto;
+  max-height: 50vh;
   display: flex;
   flex-flow: column nowrap;
+  overflow-y: auto;
   margin-top: 2em;
 }
 
