--- a/splity/src/components/stars/Stars.css
+++ b/splity/src/components/stars/Stars.css
@@ -1,14 +1,14 @@
-.fireworks {
+.stars {
   position: absolute;
   width: 150px;
   height: 150px;
   background: url("../../../public/images/e9951400.png") right top no-repeat;
   background-size: auto 150px;
   filter: invert(0) contrast(100%);
-  animation: fireworks 2s steps(24) infinite, random 8s steps(1) infinite;
+  animation: stars 2s steps(24) infinite, random 8s steps(1) infinite;
 }
 
-@keyframes fireworks {
+@keyframes stars {
   0% {
     background-position: 0%;
   }
