--- a/splity/src/app/bill-payer/confirm-payment/confirm-payment.module.css
+++ b/splity/src/app/bill-payer/confirm-payment/confirm-payment.module.css
@@ -1,4 +1,4 @@
-.backimage {
+.back-image {
   position: absolute;
   top: 0;
   left: 0;
@@ -18,7 +18,7 @@
   user-select: none;
 }
 
-.text1 {
+.bill-payer {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
@@ -27,39 +27,41 @@
   font-weight: 600;
   letter-spacing: -1px;
   text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
+  margin-top: 2em;
   user-select: none;
 }
 
-.text2 {
+.bill_amount {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
   line-height: 1;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   margin-top: 0.5em;
   font-weight: 600;
   letter-spacing: -1px;
+  margin-top: 1.5em;
   user-select: none;
 }
 
-.text3 {
+.bill-description {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
   line-height: 1;
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   font-weight: 600;
   letter-spacing: -0.5px;
-  margin-top: 1.1em;
+  margin-top: 4em;
   user-select: none;
 }
 
-.text4 {
+.date {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
   line-height: 1;
-  font-size: 1em;
+  font-size: 1.2rem;
   font-weight: 600;
   letter-spacing: -0.5px;
   margin-top: 2em;
@@ -76,6 +78,7 @@
   background-color: #000;
   border-radius: 8px;
   margin-top: 4em;
+  margin-bottom: 5em;
   user-select: none;
 }
 
