--- a/splity/src/app/bill-payer/payment-success/payment-success.module.css
+++ b/splity/src/app/bill-payer/payment-success/payment-success.module.css
@@ -9,7 +9,7 @@
   overflow-y: auto;
 }
 
-#payment-success {
+.payment-success {
   position: relative;
   display: flex;
   width: 430px;
@@ -30,9 +30,9 @@
   animation: fadeIn 0.8s ease-out 0.3s forwards;
 }
 
-.image1 {
-  width: 280px;
-  height: 280px;
+.payment-success-image {
+  width: 300px;
+  height: 300px;
   padding-right: 12px;
   object-fit: cover;
   margin-top: 5em;
@@ -65,7 +65,7 @@
   user-select: none;
 }
 
-.text3 {
+.bill-payer {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
@@ -78,7 +78,7 @@
   user-select: none;
 }
 
-.text4 {
+.bill-amount {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
@@ -87,11 +87,11 @@
   font-weight: 500;
   letter-spacing: -1px;
   text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
-  margin-top: 2em;
+  margin-top: 1.5em;
   user-select: none;
 }
 
-.text5 {
+.bill-description {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
@@ -99,11 +99,11 @@
   font-size: 0.85rem;
   font-weight: 600;
   letter-spacing: -0.5px;
-  margin-top: 1.1em;
+  margin-top: 3em;
   user-select: none;
 }
 
-.text6 {
+.date {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
@@ -111,7 +111,7 @@
   font-size: 1rem;
   font-weight: 600;
   letter-spacing: -0.5px;
-  margin-top: 3em;
+  margin-top: 1em;
   user-select: none;
 }
 
@@ -123,21 +123,28 @@
 }
 
 .button {
-  display: inline-block;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 80%;
   height: 56px;
-  color: #fff;
-  font-family: "Montserrat", sans-serif;
-  text-transform: uppercase;
-  font-size: 1rem;
-  font-weight: 600;
-  line-height: 1;
-  background: #000;
+  background-color: #000;
+  border-radius: 8px;
   margin-top: 4em;
   margin-bottom: 5em;
-  border-radius: 8px;
   user-select: none;
-  cursor: pointer;
+}
+
+.button-text {
+  width: fit-content;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1;
+  font-size: 0.95rem;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+  user-select: none;
 }
 
 .button:active {
