--- a/splity/src/app/bill-creator/split-success/split-success.module.css
+++ b/splity/src/app/bill-creator/split-success/split-success.module.css
@@ -1,4 +1,4 @@
-.text1 {
+.splity-success {
   width: fit-content;
   color: #000;
   font-family: "Montserrat", sans-serif;
@@ -6,7 +6,7 @@
   font-size: 1.8rem;
   font-weight: 800;
   letter-spacing: -1px;
-  margin-top: 1.2em;
+  margin-top: 1em;
   text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
   user-select: none;
 }
@@ -20,6 +20,14 @@
   font-weight: 400;
   letter-spacing: -0.5px;
   margin-top: 2em;
+  user-select: none;
+}
+
+.eye-image {
+  width: 20px;
+  height: 20px;
+  object-fit: cover;
+  cursor: pointer;
   user-select: none;
 }
 
