--- a/splity/src/app/home.module.css
+++ b/splity/src/app/home.module.css
@@ -1,3 +1,10 @@
+#container {
+  background: url("../../public/images/bg-black-min.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .button {
   position: relative;
   display: flex;
@@ -7,17 +14,9 @@
   height: 56px;
   background-color: #fff;
   border-radius: 8px;
+  border: 2px solid #000;
   margin-bottom: 1em;
   user-select: none;
-}
-
-.button-icon {
-  position: absolute;
-  left: 0;
-  width: 24px;
-  height: 24px;
-  object-fit: cover;
-  margin-left: 1em;
 }
 
 .button-text {
@@ -27,6 +26,6 @@
   line-height: 1;
   font-size: 0.95rem;
   font-weight: 600;
-  letter-spacing: -0.5px;
+  letter-spacing: -1px;
   user-select: none;
 }
