styling finished, project finished

--- a/splity/src/app/bill-creator/payment/payment.module.css
+++ b/splity/src/app/bill-creator/payment/payment.module.css
@@ -1,8 +1,14 @@
+#wrapper {
+  opacity: 0;
+  animation: fadeIn 0.8s ease forwards;
+}
+
 .back-image {
   position: absolute;
-  top: 0;
   left: 0;
+  bottom: -4px;
   margin-left: 2em;
+  object-fit: cover;
 }
 
 .header {
@@ -15,4 +21,13 @@
   letter-spacing: -1px;
   text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
   user-select: none;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
