--- a/splity/src/app/bill-payer/confirm-payment/confirm-payment.module.css
+++ b/splity/src/app/bill-payer/confirm-payment/confirm-payment.module.css
@@ -1,8 +1,15 @@
+#wrapper {
+  opacity: 0;
+  animation: fadeIn 0.8s ease forwards;
+}
+
+
 .back-image {
   position: absolute;
-  top: 0;
   left: 0;
+  bottom: -4px;
   margin-left: 2em;
+  object-fit: cover;
 }
 
 .header {
@@ -14,7 +21,7 @@
   font-weight: 600;
   letter-spacing: -1px;
   text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
-  margin-left: 0.8em;
+  margin-left: 0.5em;
   user-select: none;
 }
 
@@ -27,7 +34,7 @@
   font-weight: 600;
   letter-spacing: -1px;
   text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
-  margin-top: 2em;
+  margin-top: 1.5em;
   user-select: none;
 }
 
@@ -36,11 +43,10 @@
   color: #000;
   font-family: "Montserrat", sans-serif;
   line-height: 1;
-  font-size: 1.6rem;
-  margin-top: 0.5em;
+  font-size: 1.4rem;
   font-weight: 600;
   letter-spacing: -1px;
-  margin-top: 1.5em;
+  margin-top: 1em;
   user-select: none;
 }
 
@@ -61,7 +67,7 @@
   color: #000;
   font-family: "Montserrat", sans-serif;
   line-height: 1;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 600;
   letter-spacing: -0.5px;
   margin-top: 2em;
@@ -92,3 +98,13 @@
   letter-spacing: -0.5px;
   user-select: none;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
