--- a/splity/src/app/home.module.css
+++ b/splity/src/app/home.module.css
@@ -1,8 +1,45 @@
 #container {
-  background: url("../../public/images/bg-black-min.jpg");
+  background: url("../../public/images/bg-black.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.title {
+  width: fit-content;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1;
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+  margin-top: 1px;
+  text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
+  user-select: none;
+}
+
+.subtitle {
+  width: fit-content;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+  margin-top: 1em;
+  user-select: none;
+}
+
+.image {
+  width: 48px;
+  height: 48px;
+  object-fit: cover;
+  margin: 4px 0 0 4px;
+  animation-name: wave-animation;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  transform-origin: 70% 70%;
+  display: inline-block;
 }
 
 .button {
@@ -28,4 +65,31 @@
   font-weight: 600;
   letter-spacing: -1px;
   user-select: none;
+}
+
+@keyframes wave-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  }
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
