Add image in error modal && Change text components

--- a/splity/src/components/error-modal/ErrorModal.css
+++ b/splity/src/components/error-modal/ErrorModal.css
@@ -72,3 +72,10 @@
   white-space: nowrap;
   margin: auto;
 }
+
+.error-image {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
